[package]
name = "rust-imgproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["http1", "json"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time"] }
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"] }
bytes = "1"
image = { version = "0.25", features = ["png", "jpeg", "webp", "avif"] }
webp = "0.3"
ravif = "0.11"
rgb = "0.8"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mime = "0.3"
walkdir = "2"
fs2 = "0.4"

