[package]
name = "rust-imgproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["http1", "json"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "time", "sync", "process", "signal"] }
http = "1"
hyper = { version = "1", features = ["http1", "server"] }
reqwest = { version = "0.12", features = ["rustls-tls", "gzip", "brotli"] }
bytes = "1"
image = { version = "0.25", features = ["png", "jpeg", "webp", "avif-native"] }
webp = "0.3"
ravif = "0.12"
rgb = "0.8"
sha2 = "0.10"
hex = "0.4"
percent-encoding = "2"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
mime = "0.3"
walkdir = "2"
fs2 = "0.4"
tempfile = "3"
nostr-sdk = "0.37"
serde = { version = "1", features = ["derive"] }
prometheus = "0.13"
lazy_static = "1.4"

